--- a/manifests/App.config
+++ b/manifests/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="SetupWin8RPConverter.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="SetupWindows8RPConv.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <startup>
@@ -25,8 +25,8 @@
     </roleManager>
   </system.web>
   <userSettings>
-    <SetupWin8RPConverter.My.MySettings>
-      <setting name="Lang" serializeAs="String">
+    <SetupWindows8RPConv.My.MySettings>
+      <setting name="ProgLanguage" serializeAs="String">
         <value>en-US</value>
       </setting>
       <setting name="AddressBarStyle" serializeAs="String">
@@ -56,6 +56,9 @@
       <setting name="InstAeroGlass" serializeAs="String">
         <value>True</value>
       </setting>
-    </SetupWin8RPConverter.My.MySettings>
+      <setting name="Inst7TaskTw" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </SetupWindows8RPConv.My.MySettings>
   </userSettings>
 </configuration>
